fixed styling for tools & tech on mobile with icons going off screen due to 6 items being rendered per line

--- a/src/components/Skills/style.css
+++ b/src/components/Skills/style.css
@@ -27,6 +27,8 @@
 @media only screen and (max-width: 1200px) {
     .skill-icon {
         justify-items: center;
+        row-gap: 20px;
+        grid-template-columns: 1fr 1fr 1fr;
     }
     .skill-icon-container {
         grid-template-columns: 1fr;
